welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:13: error: illegal character '\u0323'
    if(day==0 ?|| day==6){
              ^alarmClock:13: error: ')' expected but something found.
    if(day==0 ?|| day==6){
              ^alarmClock:18: error: illegal start of simple expression
}
^